--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body > input[type="radio"] {
 }
 .wrapper-inner {
     width: 100%;
-    background-color: #849d8f;
+    background-color: #93a99d;
     margin: 0;
     overflow: hidden;
 }
@@ -88,43 +88,48 @@ body > input[type="radio"] {
     font-size: 14px;
 }
 .main-menu>li {
-    display: inline-block;
-    vertical-align: middle;
-    padding: 5px 14px;
+	display: inline-block;
+}
+.main-menu-option span {
+	border-bottom: 1px solid rgba(255,255,255,0.5)
+}
+.main-menu-option>a {
+	display: inline-block;
+	vertical-align: middle;
+	padding: 5px 14px;
     margin: 0;
     margin-right: -4px;
     margin-top: 7px;
-    position: relative;
     z-index: 100;
     border-radius: 20px;
     background-color: transparent;
+	text-decoration: none;
 }
-.main-menu~li:active {
+.main-menu-option+a:active {
     opacity: 0.8;
     box-shadow: inset 0px 3px 3px -1px #989998;
 }
-.main-menu>li>a {
-    text-decoration: none;
-    border-bottom: 1px solid #adbdb4;
-}
-.main-menu>li:hover {
+.main-menu-option:hover>a {
     background-color: #f7f6f3;
     padding: 5px 14px;
 }
-.main-menu>li:hover .catalog-menu {
+.main-menu-option:hover span {
+    border: none;
+}
+.main-menu-option:hover .catalog-menu {
     display: block;
 }
-.main-menu>li:first-child {
+.main-menu-option:first-child {
     position: relative;
 }
 .catalog-menu {
     position: absolute;
-    top: 31px;
-    left: -8px;
+    top: 38px;
+    left: -6px;
     display: block;
     width: 144px;
     height: 170px;
-    padding: 0px 0px;
+    padding: 0px;
     text-align: left;
     box-sizing: border-box;
     border-radius: 5px;
@@ -137,52 +142,46 @@ body > input[type="radio"] {
 }
 .catalog-menu a {
     display: block;
-    padding: 8px 20px 2px 20px;
+    padding: 5px 20px;
     background: #f7f6f3;
 }
-.main-menu .catalog-menu>li>a.catalog-menu-new {
+a.catalog-menu-new {
     display: block;
-    padding-top: 6px;
-    padding-bottom: 8px;
+    padding-top: 7px;
+    padding-bottom: 9px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-    border-bottom: 1px solid #adacaa;
+    box-shadow: inset 0px -1px 0px #adacaa;
     font-weight: 700;
 }
 a.catalog-menu-last {
-    padding-bottom: 8px;
+	padding-bottom: 10px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 }
 .catalog-menu a:hover {
     background-color: #fbded7;
 }
-.catalog-menu a:active {
+li.catalog-menu-option a:active {
     background-color: #f6b5a5;
 }
-.main-menu .catalog-menu>li>a.catalog-menu-active {
+ul.catalog-menu a.catalog-menu-active {
     background-color: #d07058;
     color: white;
 }
-.main-menu>li:active {
+.main-menu-option>a:active {
     background-color: #f7f6f3;
     padding: 5px 14px;
     box-shadow: inset 0px 1px 1px 0px #696969;
 }
-.main-menu>li:hover a {
+.main-menu-option:hover a {
     color: black;
     text-decoration: none;
     border-bottom: none;
 }
-.main-navigation .main-menu .main-menu-active {
+li.main-menu-option a.main-menu-active {
     background-color: #d07058;
-}
-.main-navigation .main-menu .main-menu-active>a {
-    border: none;
-    color: white;
-}
-.catalog-menu li.catalog-menu-active a {
-    color: white;
+	color: white;
 }
 .user {
     float: left;
@@ -197,8 +196,12 @@ a.catalog-menu-last {
 }
 .user a {
     float: right;
-    margin-right: 17px;
     text-decoration: none;
+	margin: 0;
+	margin-top: -5px;
+    text-decoration: none;
+	padding: 5px 20px 6px 42px;
+	border-radius: 20px;
 }
 .login-icon::before {
     content: " ";
@@ -226,6 +229,11 @@ a.catalog-menu-last {
 }
 .user:hover a {
     color: black;
+}
+a.user-hover-point {
+	display: inline;
+	padding: 0;
+	border-radius: 0;
 }
 .user:hover .user-hover {
     display: block;
@@ -303,6 +311,11 @@ input:focus + .label-box label {
     transform: translateY(-30px);
     color: #8fbdec;
 }
+input:valid + .label-box label {
+    font-size: 11px;
+    transform: translateY(-30px);
+    color: #b7b7b7;
+}
 .user-hover a {
     color: #323232;
     font-size: 13px;
@@ -313,6 +326,7 @@ input:focus + .label-box label {
 .basket {
     float: left;
     width: 116px;
+	padding: 0;
     padding-top: 5px;
     height: 27px;
     border-radius: 20px;
@@ -321,10 +335,15 @@ input:focus + .label-box label {
     background: rgba( 255, 255, 255, 0.2);
 }
 .basket a {
-    float: right;
-    margin-right: 35px;
-    margin-top: 1px;
+    display: inline-block;
+    margin-top: -6px;
     text-decoration: none;
+	height: 27px;
+	width: 60px;
+	padding-top: 5px;
+	padding-left: 40px;
+	padding-right: 16px;
+	border-radius: 20px;
 }
 .basket::before {
     content: " ";
@@ -338,6 +357,9 @@ input:focus + .label-box label {
 }
 .basket:hover { 
     background: #f8f7f4;
+}
+.basket:hover::before {
+	background: url("../img/index/basket-hover.svg") no-repeat 0px 5px;
 }
 .basket-fill:hover::before {
     content: " ";
@@ -545,10 +567,12 @@ p {
 }
 .stock-left {
     float: left;
+	background-color: #aa0122;
     background: url("../img/index/berryback.png");
 }
 .stock-right {
     float: right;
+	background-color: #45261a;
     background: url("../img/index/shokoback.png");
 }
 .button {
@@ -851,14 +875,24 @@ h3 {
 }
 .map {
     width: 100%;
+	height: 429px;
     margin: 0 auto;
     margin-bottom: -10px;
-    position: relative;
+	position: relative;
+	z-index: 60;
+}
+.map-img {
+	background-image: url(../img/index/map.jpg);
+	position: absolute;
+	top: 0;
+	right: 50%;
+	margin-right: -600px;
+	z-index: -10;
 }
 .feedback-form {
     position: absolute;
-    right: -2px;
-    bottom: 170px;
+    right: 42px;
+    bottom: -365px;
     display: block;
     width: 302px;
     height: 305px;
@@ -868,6 +902,7 @@ h3 {
     background-color: rgba(255,255,255,0.9);
     color: black;
     border-radius: 5px;
+	z-index: 1000;
 }
 .feedback-form>span {
     display: block;
@@ -888,13 +923,11 @@ h3 {
     margin-top: 5px;
     margin-bottom: 2px;
 }
-.feedback-form input {
+a.feedback-form-btn {
     margin-top: 25px;
     display: block;
-    width: 250px;
-    height: 45px;
+    width: 205px;
     color: white;
-    padding: 0;
     border: none;
 }
 .main-footer {
@@ -991,7 +1024,7 @@ h3 {
     border-radius: 100px;
     border: 4px solid #c2cec7;
     background-image: url("../img/index/social.svg");
-    opacity: 0.80;
+    opacity: 0.50;
 }
 .social-btn:hover {
     opacity: 1;
@@ -1054,7 +1087,7 @@ h3 {
     display: block;
     margin-bottom: 22px;
     font-size: 24px;
-    font-weight: 400;
+    font-weight: 500;
     position: relative;
 }
 .feedback>form {
@@ -1141,23 +1174,24 @@ h3 {
 }
 .basket-hover-back tr {
     display: block;
-    margin-left: 22px;
-    margin-bottom: -13px;
+    margin-left: 11px;
+    margin-bottom: -5px;
     position: relative;
 }
-.basket-hover-back tr:not(.total)::before {
-    content: "";
+a.basket-delete {
     display: block;
-    background-image: url("../img/catalog/x.svg");
-    width: 10px;
-    height: 10px;
+    background: url("../img/catalog/x.svg") no-repeat;
+    width: 13px;
+    height: 13px;
+	padding: 0;
+	border-radius: 0;
     position: absolute;
-    top: 20px;
-    left: -13px;
+    top: 27px;
+    left: -4px;
 }
 .total {
     margin: 0px;
-    margin-top: 20px;
+    margin-top: 12px;
     border-top: 1px solid #cacac7;
 }
 .basket-all {
@@ -1398,7 +1432,6 @@ input[type="checkbox"]:checked+label::after {
     position: absolute;
     top: 3px;
     left: 9px;
-    font-weight: 800;
     background: url("../img/catalog/checkbox-on.svg") no-repeat;
 }
 .filters input[type="submit"] {
