--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,16 @@ body {
     min-width: 900px;
     color: white;
 }
+.popup-back::before {
+	content: "";
+	position: fixed;
+	top: 0;
+	left: 0;
+    z-index: 8000;
+    width: 100%;
+	height:100%;
+    background: rgba(0, 0, 0, 0.5);
+}
 h1 {
     font-size: 60px;
     line-height: 60px;
@@ -87,11 +97,19 @@ body > input[type="radio"] {
     float: right;
     font-size: 14px;
 }
-.main-menu>li {
+.main-menu-option {
 	display: inline-block;
+	position: relative;
 }
-.main-menu-option span {
-	border-bottom: 1px solid rgba(255,255,255,0.5)
+.main-menu-option>a:not(.main-menu-active)::after {
+	content: "";
+	display: block;
+	position: absolute;
+	bottom: 5px;
+	left: 14px;
+	width: calc(100% - 24px);
+	height: 1px;
+	background: rgba(255,255,255,0.5)
 }
 .main-menu-option>a {
 	display: inline-block;
@@ -113,8 +131,11 @@ body > input[type="radio"] {
     background-color: #f7f6f3;
     padding: 5px 14px;
 }
-.main-menu-option:hover span {
-    border: none;
+.main-menu-option:hover>a::after {
+    background: none;
+}
+.main-menu-option:active>a::after {
+    background: none;
 }
 .main-menu-option:hover .catalog-menu {
     display: block;
@@ -360,6 +381,17 @@ input:valid + .label-box label {
 }
 .basket:hover::before {
 	background: url("../img/index/basket-hover.svg") no-repeat 0px 5px;
+}
+.basket-fill:before {
+    content: " ";
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    background: url("../img/index/user-block.svg") no-repeat -60px -30px;
+    position: absolute;
+    left: 13px;
+    top: 1px;
+    z-index: 200;
 }
 .basket-fill:hover::before {
     content: " ";
@@ -976,6 +1008,8 @@ a.feedback-form-btn {
 .footer-menu a {
     position: relative;
     margin: 0;
+	text-decoration: none;
+	border-bottom: 1px solid rgba(255,255,255,0.5);
 }
 .footer-active {
 	font-weight: 700;
@@ -1044,19 +1078,6 @@ a.feedback-form-btn {
 }
 .social-btn-vk {
     background-position: -126px -3px;
-}
-.back {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 5000;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-}
-.back-show {
-    display: block;
 }
 .feedback {
     position: fixed;
@@ -1167,7 +1188,6 @@ a.feedback-form-btn {
 	border-spacing: 8px; 
 	border-collapse: separate; 
 }
-}
 .basket-hover tr:first-child {
     margin-top: 2px;
     margin-bottom: -5px;
@@ -1258,6 +1278,10 @@ tr:first-child .basket-title {
     content: "»";
     margin: 0 7px;
 }
+.breadcrumbs a.link-color {
+	text-decoration: none;
+	border-bottom: 1px solid rgba(255,255,255,0.3);
+}
 .breadcrumbs>li:last-child::after {
     display: none;
 }
@@ -1289,6 +1313,10 @@ tr:first-child .basket-title {
     border: none;
     color: white;
     cursor: pointer;
+}
+.sort:hover {
+	background: white;
+	color: black;
 }
 .filter-price {
     width: 220px;
@@ -1362,7 +1390,7 @@ input[type="radio"] {
 input[type="radio"]+label {
     position: relative;
     margin-right: 6px;
-    cursor:pointer
+    cursor:pointer;
 }
 input[type="radio"]+label::before {
     content: " ";
@@ -1382,6 +1410,16 @@ input[type="radio"]:checked+label::after {
     position: absolute;
     top: 1px;
     left: 10px;
+}
+input[type="radio"]+label:hover::before {
+    content: " ";
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    vertical-align: middle;
+    margin: 3px 10px 3px 10px;
+    box-sizing: border-box;
+    background: url("../img/catalog/radio-hover.svg") no-repeat;
 }
 .fill-filter legend {
     margin-left: 12px;
@@ -1423,6 +1461,17 @@ input[type="checkbox"]+label::before {
     margin: -1px 10px 0px 6px;
     box-sizing: border-box;
 	border: 1px solid white;
+	border-radius: 5px;
+}
+input[type="checkbox"]+label:hover::before {
+    content: " ";
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    vertical-align: middle;
+    margin: -1px 10px 0px 6px;
+    box-sizing: border-box;
+	border: 2px solid white;
 	border-radius: 5px;
 }
 input[type="checkbox"]:checked+label::after {
