--- a/css/style.css
+++ b/css/style.css
@@ -1106,6 +1106,8 @@ a.feedback-form-btn {
 .feedback-title {
     color: black;
     display: block;
+	margin: 0;
+	padding: 0;
     margin-bottom: 22px;
     font-size: 24px;
     font-weight: 500;
