--- a/css/style.css
+++ b/css/style.css
@@ -816,7 +816,7 @@ main
 .stocks
 {
     width: 100%;
-    height: 230px;
+    height: auto;
     margin: 0 auto;
     margin-bottom: 40px;
 }
@@ -1152,9 +1152,9 @@ h3
     font-size: 16px;
 
     display: block;
-    clear: both;
 
-    height: 220px;
+
+    height: auto;
     margin: 0;
     margin-bottom: 40px;
 }
@@ -1185,23 +1185,13 @@ h3
     float: right;
 
     padding: 5px;
+	
+	height: auto;
 
     color: black;
     background: white;
     background-image: url('../img/index/email-pattern.png');
 }
-/*.news-right::before {
-    content: "";
-    display: block;
-    position: absolute;
-    background: url("../img/index/email-on.png.svg");
-    width: 98%;
-    height: 210px;
-    border-radius: 15px;
-    top: 5px;
-    left: 1%;
-    z-index: 0;
-}*/
 .news-right-content
 {
     display: block;
@@ -1218,7 +1208,8 @@ h3
 {
     display: block;
 
-    height: 100px;
+    height: auto;
+	margin-bottom: 35px;
 }
 .news .button
 {
