--- a/css/style.css
+++ b/css/style.css
@@ -1564,12 +1564,27 @@ a.feedback-form-btn
 {
   0%   {
     transform: translateX(-500px);
+	-webkit-transform: translateX(-500px);
+	  -moz--transform: translateX(-500px);
+        -ms-transform: translateX(-500px);
+         -o-transform: translateX(-500px);
+            transform: translateX(-500px);
   }
   70%  {
     transform: translateX(30px);
+	-webkit-transform: translateX(30px);
+	  -moz--transform: translateX(30px);
+        -ms-transform: translateX(30px);
+         -o-transform: translateX(30px);
+            transform: translateX(30px);
   }
   100%  {
     transform: translateX(0px);
+	-webkit-transform: translateX(0px);
+	  -moz--transform: translateX(0px);
+        -ms-transform: translateX(0px);
+         -o-transform: translateX(0px);
+            transform: translateX(0px);
   }
 }
 .feedback-close
@@ -1675,6 +1690,9 @@ a.feedback-form-btn
 {
     display: block;
 	animation: bounce 0.6s;
+	-webkit-animation: bounce 0.6s;
+	  -moz-animation: bounce 0.6s;
+		-ms-animation: bounce 0.6s;
 }
 
 /* КАТАЛОГ */
@@ -2240,6 +2258,7 @@ input[type='checkbox']:disabled + label::after
 	border-radius: 0px;
 	padding: 0;
 	margin-right: 12px;
+	font-size: 0;
 	
     content: '';
     -webkit-transform: rotate(180deg);
@@ -2263,6 +2282,7 @@ input[type='checkbox']:disabled + label::after
 	border-radius: 0px;
 	padding: 0;
 	margin-left: 10px;
+	font-size: 0;
 
     content: '';
     vertical-align: middle;
